[package]
authors = ["Bryant Luk <code@bryantluk.com>"]
description = "Creates a temporary file which can then be committed to a final path."
edition = "2021"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
license = "MIT OR Apache-2.0"
name = "staged_file"
readme = "README.md"
repository = "https://github.com/bluk/staged_file"
rust-version = "1.65.0"
version = "0.3.0"

[dependencies]
tempfile = "3"
cfg-if = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }
